--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "regexp-tree": "^0.0.85"
   },
   "devDependencies": {
-    "babel-core": "^6.26.3",
+    "@babel/core": "^7.1.2",
     "jest-cli": "^19.0.2"
   },
   "jest": {
